# salvo-express-session

./: .gitignore  Cargo.toml  README.md
.github/workflows/: e2e-test.yml
examples/: basic.rs  with_redis.rs
examples/node-compatibility/: app.js  package.json
src/: config.rs  cookie_signature.rs  depot_ext.rs  error.rs  handler.rs  lib.rs  session.rs
src/store/: memory.rs  mod.rs  redis_store.rs  traits.rs
tests/e2e/: package-lock.json  package.json  server.js  test.js
