[package]
name = "salvo-express-session"
version = "0.2.0"
edition = "2021"
authors = ["yshing"]
description = "Express-session compatible session middleware for Salvo, with connect-redis support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yshing/salvo-express-session"
keywords = ["salvo", "session", "express", "redis", "middleware"]
categories = ["web-programming", "authentication"]

[dependencies]
# Salvo core - users can use their own salvo version
salvo_core = { version = "0.87", features = ["cookie"] }

# Async runtime
tokio = { version = "1", features = ["rt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis support (optional)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# URL encoding for cookie values
urlencoding = "2.1"

# Cryptography for HMAC signatures (express-session compatible)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Async trait support
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for session ID generation
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"

# Parking lot for synchronization
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
tokio-test = "0.4"
tracing-subscriber = "0.3"
salvo = { version = "0.87", features = ["cookie"] }

[features]
default = ["redis-store"]
redis-store = ["redis"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "with_redis"
path = "examples/with_redis.rs"
required-features = ["redis-store"]
